// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileDoctypeHandler applies anchor record correctly 1`] = `
Object {
  "anchorProof": Object {
    "blockNumber": 123456,
  },
  "anchorStatus": 3,
  "content": Object {
    "much": "data",
    "very": "content",
  },
  "doctype": "tile",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        111,
        105,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        115,
        137,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        119,
        169,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
  ],
  "metadata": Object {
    "nonce": 0,
    "owners": Array [
      "did:3:bafyasdfasdf",
    ],
  },
  "signature": 2,
}
`;

exports[`TileDoctypeHandler applies genesis record correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "much": "data",
  },
  "doctype": "tile",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        111,
        105,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
  ],
  "metadata": Object {
    "owners": Array [
      "did:3:bafyasdfasdf",
    ],
  },
  "signature": 2,
}
`;

exports[`TileDoctypeHandler applies signed record correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "much": "data",
  },
  "doctype": "tile",
  "log": Array [
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        111,
        105,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
    Object {
      "codec": "dag-pb",
      "hash": Uint8Array [
        18,
        32,
        222,
        189,
        122,
        219,
        60,
        229,
        101,
        68,
        210,
        42,
        111,
        107,
        147,
        57,
        115,
        137,
        128,
        168,
        6,
        124,
        44,
        193,
        52,
        240,
        247,
        128,
        27,
        99,
        49,
        9,
        43,
        149,
      ],
      "version": 1,
    },
  ],
  "metadata": Object {
    "owners": Array [
      "did:3:bafyasdfasdf",
    ],
  },
  "next": Object {
    "content": Object {
      "much": "data",
      "very": "content",
    },
    "metadata": Object {
      "nonce": 0,
      "owners": Array [
        "did:3:bafyasdfasdf",
      ],
    },
  },
  "signature": 2,
}
`;
